Added Section2.1 timer RTT stuff in sction1's code files (inside Lab1 directly); Added modified draft of Section2 code, but not working as expected, might be the issue of string function (not detected yet).

--- a/Lab1/Section2/Makefile
+++ b/Lab1/Section2/Makefile
@@ -1,11 +1,21 @@
-CC=gcc
+# CC=gcc
 
-all: server deliver
-server: server.o
-    # $(CC) server.c -o server
-deliver: deliver.o
-    # $(CC) client.c -o client
-clean:
-	rm -f *.o server deliver
-    # UnicooooL/ECE361/Makefile
+# all: server deliver
+# server: server.o
+#     # $(CC) server.c -o server
+# deliver: deliver.o
+#     # $(CC) client.c -o client
+# clean:
+# 	rm -f *.o server deliver
+#     # UnicooooL/ECE361/Makefile
+
+TARGET = server deliver
+
+all: ${TARGET}
+server: server.c sec2.h
+	gcc -g server.c -o server
+deliver: deliver.c sec2.h
+	gcc -g deliver.c -o deliver
+clean:  
+	rm -f ${TARGET}
    
